-Removed comment block -Moved map UI -Rewrote Outro state as Loading state -Added a loading screen before the initialisation of states

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/Space Trade Game.pyproj
+/Space Trade Game.sln
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/.vs
